--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 </head>
 <body>
-    <audio id="loading" src="music/music.mp3" autoplay="true" hidden="true" loop="true"></audio>
+    <audio id="loading" src="music/NANE x DELIA - ÎN RAI ☀️ (video oficial)
+" autoplay="true" hidden="true" loop="true"></audio>
 
 <div class="video-background">
     <iframe height="100%" width="130%" src="https://www.youtube.com/embed/HWurFwhu09s?controls=0&amp;showinfo=0&amp;rel=0&amp;autoplay=1&amp;loop=1&amp;mute=1" frameborder="0"></iframe>
@@ -16,7 +17,7 @@
 <div id="app">
 	<div id="wrapper">
 		<h1 class="glitch" data-text="
-		NAME SERVER">NAME SERVER</h1>
+		NAME SERVER">Infentium Romania Roleplay</h1>
 		<span class="sub"><b>ROLEPLAY</b></span>
 	</div>
     <div class="footer">
